--- a/webapps/JEE/WEB-INF/web.xml
+++ b/webapps/JEE/WEB-INF/web.xml
@@ -7,26 +7,24 @@
   metadata-complete="true">
     <display-name>JEE</display-name>
 
-    <dependency>  
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.4</version>
-        <scope>provided</scope>
-    </dependency>
-
     <servlet>
-        <servlet-name>HelloWorld</servlet-name>
-        <servlet-class>HelloWorld</servlet-class>
+        <servlet-name>Home</servlet-name>
+        <servlet-class>Home</servlet-class>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>HelloWorld</servlet-name>
-        <url-pattern>/servlets/HelloWorld</url-pattern>
+        <servlet-name>Home</servlet-name>
+        <url-pattern></url-pattern>
     </servlet-mapping>
 
-    <welcome-file-list>
-        <welcome-file>hello.html</welcome-file>
-    </welcome-file-list>
+    <servlet>
+        <servlet-name>Form</servlet-name>
+        <servlet-class>FormServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Form</servlet-name>
+        <url-pattern>/form_answer</url-pattern>
+    </servlet-mapping>
+   
 
     <!-- Default login configuration uses form-based authentication
     <login-config>
@@ -46,9 +44,4 @@
       <role-name>tomcat</role-name>
     </security-role>
     -->
-
-    <error-page>
-        <error-code>403</error-code>
-        <location>/WEB-INF/jsp/403.jsp</location>
-    </error-page>
 </web-app>
